test/errors/unsupportedAs2.compopts
--detailed-errors # unsupportedAs2-detailed.good
--no-detailed-errors # unsupportedAs2-brief.good
